# ShutdownNotice_Cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.ini  fix_normalize_line_endings.py  gpo-scripts.ps1  install-core.ps1  install.ps1
.github/workflows/: Check_PowerShell_Encoding.yml  Sandbox-test.yml  UTF8-BOM-Check.yml  build.yml  test-install.yml
include/: common.h
src/: ID1074.cpp  ID41.cpp  ID6005.cpp  ID6006.cpp  ID6008.cpp  common.cpp  down.cpp  poweroff.cpp  poweron.cpp
tests/: ci-install.ps1  test-install.ps1  verify-install.ps1
